solved profile picture bugs

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img style="width:700px;" src="img/error.jpg" alt="Error image">
+    <div style="text-align:center">
+        <img style="width:800px;" src="img/error.jpg" alt="Error image">
+    </div>
 </body>
 </html>
