--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -73,8 +73,8 @@
                             <div class="row">
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="mobileno" class="col-form-label">Mobile No. *</label>
-                                    <input type="text" class="form-control" name="moblieNO" id="mobile-no"
-                                        placeholder="000-000-0000" required>
+                                    <input type="text" class="form-control" name="mobileNO" id="mobile-no"
+                                        placeholder="Mobile Number" required>
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="cmail" class="col-form-label">College E-mail *</label>
@@ -103,7 +103,12 @@
                                         placeholder="Enter password" required>
                                 </div>
                             </div>
-
+                            <div class="form-row">
+                                <div class="col-md-12 form-group mb-3">
+                                    <label for="picture" class="col-form-label">Select Picture </label>
+                                    <input type="file" class="form-control" name="picture" id="picture">
+                                </div>
+                            </div>
                             <div class="input-field">
                                 <input type="submit" class="submit" value="Submit">
                             </div>
