--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -183,10 +183,9 @@
                             </div>
                             <div class="form-row">
                                 <div class="col-md-12 form-group mb-3">
-                                    <label for="picture" class="col-form-label">Select Picture *</label>
+                                    <label for="picture" class="col-form-label">Select Picture </label>
                                     <input type="file" class="form-control" name="picture" id="picture">
                                 </div>
-
                             </div>
 
                             <div class="input-field">
