--- a/views/passwordInstructor.ejs
+++ b/views/passwordInstructor.ejs
@@ -33,13 +33,15 @@
                            
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="New-Password" class="col-form-label">New Password *</label>
-                                    <input type="password" class="form-control" name="password" placeholder="New password" required>
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="New password" required>
+                                    <div id="pssd"></div>
                                 </div>
                          
                             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Conform-new-Password" class="col-form-label">Confirm New Password *</label>
-                                    <input type="password" class="form-control" name="repassword" placeholder="Confirm new password" required>
+                                    <input type="password" class="form-control" id="repassword" name="repassword" placeholder="Confirm new password" required>
+                                    <div class="repssd"></div>
                                 </div>
                           
                                 <div class="input-field">
