--- a/views/addSemester.ejs
+++ b/views/addSemester.ejs
@@ -69,7 +69,7 @@
                                         <%= program[i].branchOffered.name %>
                                 </div>
                                 <div class="col col-3" data-label="Name">
-                                    <input style="accent-color: #242728; transform:scale(1.5);" type="checkbox" name="program" value="<%= program[i].id %>" required><span
+                                    <input style="accent-color: #242728; transform:scale(1.5);" type="checkbox" name="program" value="<%= program[i].id %>"><span
                                         class="checkmark" ></span>
                                 </div>
                             </li>
