--- a/public/css/form.css
+++ b/public/css/form.css
@@ -38,6 +38,14 @@
     margin-right: 20%;
     width: 70%;
   }
+  .form-container1 {
+    margin-top: 2%;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    padding-left: 15%;
+    margin-right: 20%;
+    width: 70%;
+  }
   .student-container{
     display: flex;
     margin-top: 5%;
