--- a/views/support.ejs
+++ b/views/support.ejs
@@ -30,20 +30,20 @@
     <div class="container">
         <div class="ind">
         <button class="ribbon mail">
-          <span class="entypo-mail"></span>
+          <span class="fa fa-envelope"></span>
         </button>
         <p class="text1"><span>Mail<br></span>helpdesk@daiict.ac.in</p>
     </div>
     <div class="ind">
         <button class="ribbon location">
-          <span class="entypo-location"></span>
+          <span class="fa fa-map-marker"></span>
         </button>
         
         <p class="text"><span>Address<br></span> Daiict college, Reliance Cross Rd, Gandhinagar, Gujarat 382007</p>
         </div>
         <div class="ind">
         <button class="ribbon phone">
-          <span class="entypo-phone"></span>
+          <span class="fa fa-phone"></span>
         </button>
         <p class="text1"><span>Contact<br></span>+265 8887774</p>
       </div>
